[package]
name = "zuoti_initer"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["liuluopeng"]
repository = "https://github.com/liuluopeng/zuoti_initer"
homepage = "https://github.com/liuluopeng/zuoti_initer"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
