[package]
name = "zuoti_initer"
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = ["liuluopeng"]
repository = "https://github.com/liuluopeng/zuoti_initer"
homepage = "https://github.com/liuluopeng/zuoti_initer"
keywords = ["cli"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
description = "rust做题的初始化模板, 支持函数风格,输入输出风格"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
